--- a/index.html
+++ b/index.html
@@ -18,9 +18,15 @@
         <nav class="navigation">
             <a href="index.html" lang="en" class="logo">Web<span class="logo-special">Studio</span></a>
                 <ul class="links">
-                    <li class="links-item"><a href="index.html" class="nav-link">Студия</a></li>
-                    <li class="links-item"><a href="portfolio.html" class="nav-link">Портфолио</a></li>
-                    <li class="links-item"><a href="#" class="nav-link">Контакты</a></li>
+                    <li class="links-item">
+                        <a href="index.html" class="nav-link current">Студия</a>
+                    </li>
+                    <li class="links-item">
+                        <a href="portfolio.html" class="nav-link">Портфолио</a>
+                    </li>
+                    <li class="links-item">
+                        <a href="#" class="nav-link">Контакты</a>
+                    </li>
                 </ul>
             </nav>
             <ul class="contacts">
@@ -40,7 +46,7 @@
     <main>
         <section class="hero">
             <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-            <button type="button" class="hero-btn">Заказать услугу</button>
+            <button type="button" class="hero-btn" data-modal-open>Заказать услугу</button>
         </section>
         <section class="section section-modified">
             <h2 class="hidden">Наши преимущества</h2>
@@ -89,9 +95,24 @@
             <h2 class="sect-title">Чем мы занимаемся</h2>
             <div class="container">
                 <ul class="works">
-                    <li><img src="images/example-one.jpg" alt="пример работы" width="370" class="examples"></li>
-                    <li><img src="images/example-two.jpg" alt="пример работы" width="370" class="examples"></li>
-                    <li><img src="images/example-three.jpg" alt="пример работы" width="370" class="examples"></li>
+                    <li>
+                        <div class="work-item">
+                            <img src="images/example-one.jpg" alt="пример работы" width="370" class="examples">
+                            <p class="label">десктопные приложения</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="work-item">
+                            <img src="images/example-two.jpg" alt="пример работы" width="370" class="examples">
+                            <p class="label">мобильные приложения</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="work-item">
+                            <img src="images/example-three.jpg" alt="пример работы" width="370" class="examples">
+                            <p class="label">дизайнерские решения</p>
+                        </div>
+                    </li>
                 </ul> 
             </div>
         </section>
@@ -346,5 +367,16 @@
         </div>
         
     </footer>
+    <!-- modal window -->
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button type="button" class="modal-close-button" data-modal-close>
+                <svg width="18" height="18" class="close-icon">
+                    <use href="./img-decor/sprite.svg#close-cross"></use>
+                </svg>
+            </button>
+        </div>
+    </div>
+    <script src="./js/modal.js"></script>
 </body>
 </html>
