--- a/portfolio.html
+++ b/portfolio.html
@@ -18,9 +18,15 @@
             <nav class="navigation">
                 <a href="index.html" lang="en" class="logo">Web<span class="logo-special">Studio</span></a>
                 <ul class="links">
-                    <li class="links-item"><a href="index.html" class="nav-link">Студия</a></li>
-                    <li class="links-item"><a href="portfolio.html" class="nav-link">Портфолио</a></li>
-                    <li class="links-item"><a href="#" class="nav-link">Контакты</a></li>
+                    <li class="links-item">
+                        <a href="index.html" class="nav-link">Студия</a>
+                    </li>
+                    <li class="links-item">
+                        <a href="portfolio.html" class="nav-link current">Портфолио</a>
+                    </li>
+                    <li class="links-item">
+                        <a href="#" class="nav-link">Контакты</a>
+                    </li>
                 </ul>
             </nav>
             <ul class="contacts">
@@ -53,7 +59,11 @@
                 <ul class="projects">
                     <li class="projects-list">
                         <a href="#" class="project-card">
-                            <img src="./img-portfilio/img1.jpg" alt="Превью работы" width="370" class="project-photo">
+                            <div class="project-card-item">
+                                <img src="./img-portfilio/img1.jpg" alt="Превью работы" width="370" class="project-photo">
+                                <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="project-subscribe">
                                 <h3 class="project-name">Технокряк</h3>
                                 <p class="project-type">Веб-сайт</p>
@@ -63,7 +73,11 @@
                     </li>
                     <li class="projects-list">
                         <a href="#" class="project-card">
-                            <img src="./img-portfilio/img2.jpg" alt="Превью работы" width="370" class="project-photo">
+                            <div class="project-card-item">
+                                <img src="./img-portfilio/img2.jpg" alt="Превью работы" width="370" class="project-photo">
+                                <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="project-subscribe">
                                 <h3 class="project-name">Постер New Orlean vs Golden Star</h3>
                                 <p class="project-type">Дизайн</p>
@@ -73,7 +87,11 @@
                     </li>
                     <li class="projects-list">
                         <a href="#" class="project-card">
-                            <img src="./img-portfilio/img3.jpg" alt="Превью работы" width="370" class="project-photo">
+                            <div class="project-card-item">
+                                <img src="./img-portfilio/img3.jpg" alt="Превью работы" width="370" class="project-photo">
+                                <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="project-subscribe">
                                 <h3 class="project-name">Ресторан Seafood</h3>
                                 <p class="project-type">Приложение</p>
@@ -83,7 +101,11 @@
                     </li>
                     <li class="projects-list">
                         <a href="#" class="project-card">
-                            <img src="./img-portfilio/img4.jpg" alt="Превью работы" width="370" class="project-photo">
+                            <div class="project-card-item">
+                                <img src="./img-portfilio/img4.jpg" alt="Превью работы" width="370" class="project-photo">
+                                <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="project-subscribe">
                                 <h3 class="project-name">Проект Prime</h3>
                                 <p class="project-type">Маркетинг</p>
@@ -93,7 +115,11 @@
                     </li>
                     <li class="projects-list">
                         <a href="#" class="project-card">
-                            <img src="./img-portfilio/img5.jpg" alt="Превью работы" width="370" class="project-photo">
+                            <div class="project-card-item">
+                                <img src="./img-portfilio/img5.jpg" alt="Превью работы" width="370" class="project-photo">
+                                <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="project-subscribe">
                                 <h3 class="project-name">Проект Boxes</h3>
                                 <p class="project-type">Приложение</p>
@@ -103,18 +129,25 @@
                     </li>
                     <li class="projects-list">
                         <a href="#" class="project-card">
-                            <img src="./img-portfilio/img6.jpg" alt="Превью работы" width="370" class="project-photo">
+                            <div class="project-card-item">
+                                <img src="./img-portfilio/img6.jpg" alt="Превью работы" width="370" class="project-photo">
+                                <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="project-subscribe">
                                 <h3 class="project-name">Inspiration has no Borders</h3>
                                 <p class="project-type">Веб-сайт</p>
                                 <p class="project-descript">Lorem ipsum dolor sit amet.</p>
                             </div>
-                            
                         </a>
                     </li>
                     <li class="projects-list">
                         <a href="#" class="project-card">
-                            <img src="./img-portfilio/img7.jpg" alt="Превью работы" width="370" class="project-photo">
+                            <div class="project-card-item">
+                                <img src="./img-portfilio/img7.jpg" alt="Превью работы" width="370" class="project-photo">
+                                <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="project-subscribe">
                                 <h3 class="project-name">Издание Limited Edition</h3>
                                 <p class="project-type">Дизайн</p>
@@ -124,7 +157,11 @@
                     </li>
                     <li class="projects-list">
                         <a href="#" class="project-card">
-                            <img src="./img-portfilio/img8.jpg" alt="Превью работы" width="370" class="project-photo">
+                            <div class="project-card-item">
+                                <img src="./img-portfilio/img8.jpg" alt="Превью работы" width="370" class="project-photo">
+                                <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="project-subscribe">
                                 <h3 class="project-name">Проект LAB</h3>
                                 <p class="project-type">Маркетинг</p>
@@ -134,7 +171,11 @@
                     </li>
                     <li class="projects-list">
                         <a href="#" class="project-card">
-                            <img src="./img-portfilio/img9.jpg" alt="Превью работы" width="370" class="project-photo">
+                            <div class="project-card-item">
+                                <img src="./img-portfilio/img9.jpg" alt="Превью работы" width="370" class="project-photo">
+                                <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="project-subscribe">
                                 <h3 class="project-name">Growing Business</h3>
                                 <p class="project-type">Приложение</p>
