hw5-checked&fixed

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="css/modern-normalize.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -53,9 +54,7 @@
                     <li><button type="button" class="filter-item">Приложения</button></li>
                     <li><button type="button" class="filter-item">Дизайн</button></li>
                     <li><button type="button" class="filter-item">Маркетинг</button></li>
-                </ul>    
-            </div>
-            <div class="container">
+                </ul>
                 <ul class="projects">
                     <li class="projects-list">
                         <a href="#" class="project-card">
@@ -67,8 +66,7 @@
                             <div class="project-subscribe">
                                 <h3 class="project-name">Технокряк</h3>
                                 <p class="project-type">Веб-сайт</p>
-                                <p class="project-descript">Lorem ipsum dolor sit amet.</p>    
-                            </div>
+                                </div>
                         </a>
                     </li>
                     <li class="projects-list">
@@ -81,7 +79,6 @@
                             <div class="project-subscribe">
                                 <h3 class="project-name">Постер New Orlean vs Golden Star</h3>
                                 <p class="project-type">Дизайн</p>
-                                <p class="project-descript">Lorem ipsum dolor sit amet.</p>
                             </div>
                         </a>
                     </li>
@@ -95,7 +92,6 @@
                             <div class="project-subscribe">
                                 <h3 class="project-name">Ресторан Seafood</h3>
                                 <p class="project-type">Приложение</p>
-                                <p class="project-descript">Lorem ipsum dolor sit amet.</p>
                             </div>
                         </a>
                     </li>
@@ -109,7 +105,6 @@
                             <div class="project-subscribe">
                                 <h3 class="project-name">Проект Prime</h3>
                                 <p class="project-type">Маркетинг</p>
-                                <p class="project-descript">Lorem ipsum dolor sit amet.</p>
                             </div>
                         </a>
                     </li>
@@ -123,7 +118,6 @@
                             <div class="project-subscribe">
                                 <h3 class="project-name">Проект Boxes</h3>
                                 <p class="project-type">Приложение</p>
-                                <p class="project-descript">Lorem ipsum dolor sit amet.</p>
                             </div>
                         </a>
                     </li>
@@ -137,7 +131,6 @@
                             <div class="project-subscribe">
                                 <h3 class="project-name">Inspiration has no Borders</h3>
                                 <p class="project-type">Веб-сайт</p>
-                                <p class="project-descript">Lorem ipsum dolor sit amet.</p>
                             </div>
                         </a>
                     </li>
@@ -151,7 +144,6 @@
                             <div class="project-subscribe">
                                 <h3 class="project-name">Издание Limited Edition</h3>
                                 <p class="project-type">Дизайн</p>
-                                <p class="project-descript">Lorem ipsum dolor sit amet.</p>
                             </div>
                         </a>
                     </li>
@@ -165,7 +157,6 @@
                             <div class="project-subscribe">
                                 <h3 class="project-name">Проект LAB</h3>
                                 <p class="project-type">Маркетинг</p>
-                                <p class="project-descript">Lorem ipsum dolor sit amet.</p>
                             </div>
                         </a>
                     </li>
@@ -179,7 +170,6 @@
                             <div class="project-subscribe">
                                 <h3 class="project-name">Growing Business</h3>
                                 <p class="project-type">Приложение</p>
-                                <p class="project-descript">Lorem ipsum dolor sit amet.</p>
                             </div>
                         </a>
                     </li>
