--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
             rel="stylesheet">
-    <link rel="stylesheet" href="modern-normalize.css">
+    <link rel="stylesheet" href="css/modern-normalize.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -45,13 +45,15 @@
     </header>
     <main>
         <section class="hero">
-            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-            <button type="button" class="hero-btn" data-modal-open>Заказать услугу</button>
+            <div class="container">
+                <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+                <button type="button" class="hero-btn" data-modal-open>Заказать услугу</button>
+            </div>
         </section>
         <section class="section section-modified">
-            <h2 class="hidden">Наши преимущества</h2>
             <div class="container">
-               <ul class="pref">
+                <h2 class="hidden">Наши преимущества</h2>
+                <ul class="pref">
                     <li class="pref-item">
                         <div class="icon-wrapper">
                             <svg width="70" height="70" class="pref-icon">
@@ -92,8 +94,8 @@
             </div>
         </section>
         <section class="section">
-            <h2 class="sect-title">Чем мы занимаемся</h2>
             <div class="container">
+                <h2 class="sect-title">Чем мы занимаемся</h2>
                 <ul class="works">
                     <li>
                         <div class="work-item">
@@ -117,8 +119,8 @@
             </div>
         </section>
         <section class="section special-bgc">
-            <h2 class="sect-title">Наша команда</h2>
             <div class="container">
+                <h2 class="sect-title">Наша команда</h2>
                 <ul class="team">
                     <li class="team-item">
                         <img src="images/igor-demianenko-1.jpg" alt="фото сотрудника" width="270" class="team-photo">
@@ -272,8 +274,8 @@
             </div>
         </section>
         <section class="section">
-            <h2 class="sect-title">Постоянные клиенты</h2>
             <div class="container">
+                <h2 class="sect-title">Постоянные клиенты</h2>
                 <ul class="customers">
                     <li class="customer-list">
                         <a href="#" class="customer-link">
