--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
             <h2 class="hidden">Портфолио</h2>
             <div class="container">
                 <ul class="filter">
-                    <li><button type="button" class="filter-item">Все</button></li>
+                    <li class="filter-item-list"><button type="button" class="filter-item">Все</button></li>
                     <li><button type="button" class="filter-item">Веб-сайты</button></li>
                     <li><button type="button" class="filter-item">Приложения</button></li>
                     <li><button type="button" class="filter-item">Дизайн</button></li>
